[project]
name = "mal-issue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio[pyav]>=2.37.0",
    "labelbox[data]>=6.9.0",
    "nanoid>=2.0.0",
    "ndjson>=0.3.1",
    "numpy>=2.2.4",
    "supervision>=0.25.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
]
